Updated swagger.json settings
