# lib/Api/Model/Product.php
@@ -75,7 +75,7 @@ class Product implements ArrayAccess
         'description' => 'string',
         'auction' => 'bool',
         'date_start' => '\DateTime',
-        'live_id' => 'int',
+        'live' => '\Swappy\Api\Model\Live',
         'price' => 'double',
         'reserve_price' => 'double',
         'buynow_price' => 'double',
@@ -84,6 +84,7 @@ class Product implements ArrayAccess
         'payment' => '\Swappy\Api\Model\Payment[]',
         'auto_renew' => 'bool',
         'taxes' => '\Swappy\Api\Model\ProductTaxes',
+        'estimate' => '\Swappy\Api\Model\ProductEstimate',
         'offer' => '\Swappy\Api\Model\ProductOffer',
         'duration' => 'int'
     );
@@ -107,7 +108,7 @@ class Product implements ArrayAccess
         'description' => 'description',
         'auction' => 'auction',
         'date_start' => 'date_start',
-        'live_id' => 'live_id',
+        'live' => 'live',
         'price' => 'price',
         'reserve_price' => 'reserve_price',
         'buynow_price' => 'buynow_price',
@@ -116,6 +117,7 @@ class Product implements ArrayAccess
         'payment' => 'payment',
         'auto_renew' => 'auto_renew',
         'taxes' => 'taxes',
+        'estimate' => 'estimate',
         'offer' => 'offer',
         'duration' => 'duration'
     );
@@ -139,7 +141,7 @@ class Product implements ArrayAccess
         'description' => 'setDescription',
         'auction' => 'setAuction',
         'date_start' => 'setDateStart',
-        'live_id' => 'setLiveId',
+        'live' => 'setLive',
         'price' => 'setPrice',
         'reserve_price' => 'setReservePrice',
         'buynow_price' => 'setBuynowPrice',
@@ -148,6 +150,7 @@ class Product implements ArrayAccess
         'payment' => 'setPayment',
         'auto_renew' => 'setAutoRenew',
         'taxes' => 'setTaxes',
+        'estimate' => 'setEstimate',
         'offer' => 'setOffer',
         'duration' => 'setDuration'
     );
@@ -171,7 +174,7 @@ class Product implements ArrayAccess
         'description' => 'getDescription',
         'auction' => 'getAuction',
         'date_start' => 'getDateStart',
-        'live_id' => 'getLiveId',
+        'live' => 'getLive',
         'price' => 'getPrice',
         'reserve_price' => 'getReservePrice',
         'buynow_price' => 'getBuynowPrice',
@@ -180,6 +183,7 @@ class Product implements ArrayAccess
         'payment' => 'getPayment',
         'auto_renew' => 'getAutoRenew',
         'taxes' => 'getTaxes',
+        'estimate' => 'getEstimate',
         'offer' => 'getOffer',
         'duration' => 'getDuration'
     );
@@ -214,7 +218,7 @@ class Product implements ArrayAccess
         $this->container['description'] = isset($data['description']) ? $data['description'] : null;
         $this->container['auction'] = isset($data['auction']) ? $data['auction'] : null;
         $this->container['date_start'] = isset($data['date_start']) ? $data['date_start'] : null;
-        $this->container['live_id'] = isset($data['live_id']) ? $data['live_id'] : null;
+        $this->container['live'] = isset($data['live']) ? $data['live'] : null;
         $this->container['price'] = isset($data['price']) ? $data['price'] : null;
         $this->container['reserve_price'] = isset($data['reserve_price']) ? $data['reserve_price'] : null;
         $this->container['buynow_price'] = isset($data['buynow_price']) ? $data['buynow_price'] : null;
@@ -223,6 +227,7 @@ class Product implements ArrayAccess
         $this->container['payment'] = isset($data['payment']) ? $data['payment'] : null;
         $this->container['auto_renew'] = isset($data['auto_renew']) ? $data['auto_renew'] : null;
         $this->container['taxes'] = isset($data['taxes']) ? $data['taxes'] : null;
+        $this->container['estimate'] = isset($data['estimate']) ? $data['estimate'] : null;
         $this->container['offer'] = isset($data['offer']) ? $data['offer'] : null;
         $this->container['duration'] = isset($data['duration']) ? $data['duration'] : null;
     }
@@ -482,22 +487,22 @@ class Product implements ArrayAccess
     }
 
     /**
-     * Gets live_id
-     * @return int
+     * Gets live
+     * @return \Swappy\Api\Model\Live
      */
-    public function getLiveId()
+    public function getLive()
     {
-        return $this->container['live_id'];
+        return $this->container['live'];
     }
 
     /**
-     * Sets live_id
-     * @param int $live_id
+     * Sets live
+     * @param \Swappy\Api\Model\Live $live
      * @return $this
      */
-    public function setLiveId($live_id)
+    public function setLive($live)
     {
-        $this->container['live_id'] = $live_id;
+        $this->container['live'] = $live;
 
         return $this;
     }
@@ -666,6 +671,27 @@ class Product implements ArrayAccess
     public function setTaxes($taxes)
     {
         $this->container['taxes'] = $taxes;
+
+        return $this;
+    }
+
+    /**
+     * Gets estimate
+     * @return \Swappy\Api\Model\ProductEstimate
+     */
+    public function getEstimate()
+    {
+        return $this->container['estimate'];
+    }
+
+    /**
+     * Sets estimate
+     * @param \Swappy\Api\Model\ProductEstimate $estimate
+     * @return $this
+     */
+    public function setEstimate($estimate)
+    {
+        $this->container['estimate'] = $estimate;
 
         return $this;
     }
